<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="15dp"
    android:paddingBottom="10dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:text="@string/emergency_header"
        android:textSize="@dimen/header_text"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_width="250dp"
        android:textColor="@color/colorLightBlack"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/emergency_sub"
        android:textSize="@dimen/information_text"
        android:textAlignment="center"
        android:layout_marginBottom="25dp"
        android:textColor="@color/colorLightBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/emergency_name"
            android:hint="@string/emergency_name"
            android:textSize="@dimen/paragraph_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/emergency_email"
            android:hint="@string/emergency_email"
            android:textSize="@dimen/paragraph_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.hbb20.CountryCodePicker
                app:ccp_countryPreference="PH"
                android:id="@+id/country_code_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/emergency_mobile"
                android:layout_width="248dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/country_code_picker"
                android:hint="@string/emergency_mobile"
                android:textSize="@dimen/paragraph_text" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/resume_save"
            android:text="@string/resume_save"
            android:textColor="@color/colorPrimary"
            android:background="@color/colorWhite"
            android:textAllCaps="false"
            android:stateListAnimator="@null"
            android:layout_width="130dp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/resume_cancel"
            android:text="@string/resume_cancel"
            android:textColor="@color/colorDarkGray"
            android:background="@color/colorWhite"
            android:textAllCaps="false"
            android:stateListAnimator="@null"
            android:layout_width="130dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>