<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_color">

    <TextView
        android:id="@+id/register_main_header"
        android:text="@string/register_setup_header"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textAlignment="center"
        android:textSize="@dimen/header_text"
        android:textColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/register_setup_sub"
        android:text="@string/register_setup_sub"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textAlignment="center"
        android:textSize="@dimen/information_text"
        android:textColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/register_setup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="50dp"
        android:background="@color/colorWhite"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/register_setup"
        android:textSize="@dimen/paragraph_text"
        style="?android:attr/borderlessButtonStyle" />

</LinearLayout>