<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <RelativeLayout
        android:background="@drawable/background_color"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height">
        <ImageView
            android:id="@+id/icon_back"
            android:src="@drawable/ic_back"
            android:layout_height="match_parent"
            android:layout_width="60dp"
            android:padding="20dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />
        <TextView
            android:id="@+id/register_id_banner"
            android:text="@string/register_first_header"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/paragraph_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/icon_back" />
    </RelativeLayout>
    <LinearLayout
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/register_main_header"
            android:text="@string/register_first"
            android:layout_marginTop="80dp"
            android:textAlignment="center"
            android:textSize="@dimen/header_text"
            android:textColor="@color/colorLightBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/register_main_sub"
            android:text="@string/register_first_sub"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textSize="@dimen/information_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/register_main_button"
            android:text="@string/register_first_button"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:textAllCaps="false"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle" />
    </LinearLayout>

</LinearLayout>