<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="25dp"
    android:paddingBottom="25dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:text="@string/photo_header"
        android:textSize="@dimen/paragraph_text"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_width="match_parent"
        android:textColor="@color/colorLightBlack"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/option_camera"
            android:orientation="vertical"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/icon_camera"
                android:tint="@color/colorDarkGray"
                android:layout_width="35dp"
                android:layout_height="35dp" />
            <TextView
                android:text="@string/photo_camera"
                android:textSize="@dimen/information_text"
                android:textColor="@color/colorDarkGray"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/option_device"
            android:orientation="vertical"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/icon_monitor"
                android:tint="@color/colorDarkGray"
                android:layout_width="35dp"
                android:layout_height="35dp" />
            <TextView
                android:text="@string/photo_phone"
                android:textSize="@dimen/information_text"
                android:textColor="@color/colorDarkGray"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>